tests/Rules/Aria/Fixtures/valid/role_none.html.twig
<div>No role here</div>
