tests/Rules/Aria/Fixtures/invalid/list_missing_items.html.twig
{# 1 errors #}
<div role="list">
  No items
</div>
